add github link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section>
 <h2>Links</h2>
 <ul>
-<li><a id="github" href="#" target="_blank" rel="noreferrer">GitHub（あとで設定）</a></li>
+<li><a id="github" href="https://github.com/ryun-dev" target="_blank" rel="noreferrer">GitHub</a></li>
 </ul>
 </section>
 
