add projects section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 <section>
 <h2>Skills</h2>
+<section>
+    <h2>Projects</h2>
+    <u1>
+        <li>ポートフォリオサイト (HTML/CSS/Jabascript)</li>
+    </u1>
+</section>
 <ul>
 <li>C++（授業レベル）</li>
 <li>Python（環境構築・実行OK）</li>
